deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wize-log-service
  namespace: wizeworks
  labels:
    app: wize-log
spec:
  selector:
    app: wize-log
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
