deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wize-log-ingress
  namespace: wizeworks
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: wizeworks-encrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.wize.works
      secretName: wize-log-tls
  rules:
    - host: api.wize.works
      http:
        paths:
          - path: /wize-log(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: wize-log-service
                port:
                  number: 80
